2011-01-17  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.16.1 Released.

	* AST-2011-001: Stack buffer overflow in SIP channel driver

2011-01-12  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.16 Released.

2011-01-12  Leif Madsen <lmadsen@digium.com>

	* Merge in changes for configure script to resolve issue for
	  Debian package builders.

	  ------------------------------------------------------------------------
	  r301220 | pabelanger | 2011-01-09 15:38:25 -0600 (Sun, 09 Jan 2011)
	  | 14 lines

	  SOUND_CACHE_DIR now defaults to empty

	  Sounds files included in the Asterisk tarball were being ignored and
	  re-downloaded. Users wanting to cache the files can still override
	  the setting
	  using the --with-sounds-cache option.

	  (closes issue 0018589)
	  Reported by: pabelanger
	  Patches:
	        issue18589.patch uploaded by pabelanger (license 224)
	      Tested by: pabelanger

	      Review: https://reviewboard.asterisk.org/r/1074/ [^]

	  ------------------------------------------------------------------------

2010-12-13  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.16-rc1 Released.

2010-12-10 16:24 +0000 [r298050]  Tilghman Lesher <tlesher@digium.com>

	* main/netsock.c, configure, include/asterisk/autoconfig.h.in,
	  configure.ac: Portability issue on OpenSolaris. Also detect the
	  required structure element, because OpenSolaris defines
	  SIOCGIFHWADDR, but without support for IP sockets. (closes issue
	  #18442) Reported by: ranjtech Patches:
	  20101209__issue18442.diff.txt uploaded by tilghman (license 14)
	  Tested by: ranjtech

2010-12-09 22:10 +0000 [r297960]  Terry Wilson <twilson@digium.com>

	* /, channels/chan_sip.c: Merged revisions 297959 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.4 ........
	  r297959 | twilson | 2010-12-09 16:00:30 -0600 (Thu, 09 Dec 2010)
	  | 14 lines Ignore spurious REGISTER requests If a REGISTER
	  request with a Call-ID matching an existing transaction is